.provarCaches/00D6C0000000xA6UAI/objects/Student_Bulk_Upload__c.object
<CustomObject>
    <fields>
        <fullName>Appinium_Class_ID__c</fullName>
        <label>Appinium Class ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ILT_Cass_Start_Date__c</fullName>
        <formula>ILT_Class__r.redwing__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ILT Cass Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILT_Class_Id__c</fullName>
        <formula>ILT_Class__r.Id</formula>
        <label>ILT Class Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ILT_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILT Class</label>
        <referenceTo>redwing__ILT_Class__c</referenceTo>
        <relationshipLabel>Student Bulk Uploads</relationshipLabel>
        <relationshipName>Student_Bulk_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Student Bulk Uploads</relationshipLabel>
        <relationshipName>Student_Bulk_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saba_Class_ID__c</fullName>
        <label>Saba Class ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skedulo_Job_Status__c</fullName>
        <formula>TEXT(ILT_Class__r.Skedulo_Job_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skedulo Job Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>No ILT Class Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Email_Address__c</fullName>
        <label>Student Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_First_Name__c</fullName>
        <label>Student First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Last_Name__c</fullName>
        <label>Student Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Phone_Number__c</fullName>
        <label>Student Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Voucher_Status__c</fullName>
        <formula>TEXT(Voucher__r.Status__c)</formula>
        <label>Voucher Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_User_Email__c</fullName>
        <formula>Voucher__r.User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voucher</label>
        <referenceTo>Voucher__c</referenceTo>
        <relationshipLabel>Student Bulk Uploads</relationshipLabel>
        <relationshipName>Student_Bulk_Uploads</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Bulk Upload</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ILT_Class__c</columns>
        <columns>ILT_Cass_Start_Date__c</columns>
        <columns>Appinium_Class_ID__c</columns>
        <columns>Voucher__c</columns>
        <columns>Status__c</columns>
        <columns>Voucher_Status__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X12_14Classes</fullName>
        <columns>NAME</columns>
        <columns>Has_Error__c</columns>
        <columns>Is_Processed__c</columns>
        <columns>ILT_Cass_Start_Date__c</columns>
        <columns>Appinium_Class_ID__c</columns>
        <columns>Skedulo_Job_Status__c</columns>
        <columns>ILT_Class__c</columns>
        <columns>Voucher__c</columns>
        <columns>Voucher_Status__c</columns>
        <columns>Voucher_User_Email__c</columns>
        <columns>Student_Email_Address__c</columns>
        <columns>Student_First_Name__c</columns>
        <columns>Student_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ILT_Cass_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>12/14/2019</value>
        </filters>
        <filters>
            <field>Has_Error__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Skedulo_Job_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>Vouchers Needs to be created</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Student Bulk Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Bulk Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>